<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="205dp"
        android:layout_height="66dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="7dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="557dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnVercarritoMB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtMedicina"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/buscarMedicina"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBuscar"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/txtBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/busca"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edtMedicina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btnBuscar"
        app:layout_constraintBottom_toTopOf="@+id/rvMedicina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtClasificacion"
        app:layout_constraintTop_toBottomOf="@+id/edtMedicina" />

    <TextView
        android:id="@+id/txtClasificacion"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:text="@string/clasificacion"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tipoMedicina"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscar" />

    <Spinner
        android:id="@+id/tipoMedicina"
        android:layout_width="264dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/rvMedicina"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/edtMedicina" />

    <Button
        android:id="@+id/btnVercarritoMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="Vercarro"
        android:text="@string/btnVercarro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMedicina"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVercarritoMB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

