<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="725dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="189dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/txtDetalle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_marginBottom="12dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtDetalle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="11dp"
            android:text="@string/detalle"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:src="@drawable/ic_android_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/iconImageView"
            android:layout_toRightOf="@+id/iconImageView"
            android:orientation="vertical"></LinearLayout>


        <TextView
            android:id="@+id/medicinaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="Medicina"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/medicinaPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="Precio"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/medicinaDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="Sirve para tal y tal"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/menoscantidad"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F83816"
                    android:text="-"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/txtCantidad"
                    android:layout_width="30sp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/mascantidad"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#10E6F5"
                    android:text="+"
                    app:cornerRadius="20dp"></Button>
            </LinearLayout>
        </RelativeLayout>
        //Boton Confirmar

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="1dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVercarritoMB"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:onClick="Vercarro"
                    android:text="@string/btnVercarro" />

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="@string/txtAgregar" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>